--- a/views/auth/forgot-password.pug
+++ b/views/auth/forgot-password.pug
@@ -1,12 +1,12 @@
 extends ../layout/index
 
 block vars
-  - var pageTitle='¿Olvidaste tu contraseña?'
+  - var pageTitle = "¿Olvidaste tu contraseña?"
 
 block content
   +title(pageTitle)
 
-  div(class="mt-8 mx-auto max-w-sm")
+  div(class="mx-auto mt-8 max-w-sm")
     div(class="bg-white p-8 shadow")
       if flashes['forgot password']
         div(class="mb-4 text-center")
@@ -15,13 +15,21 @@ block content
         div(class="mb-4 text-center")
           +alert-danger('Tu correo electrónico aún no ha sido verificado.', flashes['unverified email'])
 
-      form(class="flex flex-col gap-y-5" method='POST' action='/auth/forgot-password' noValidate)
+      form(
+        class="flex flex-col gap-y-5"
+        method="POST"
+        action="/auth/forgot-password"
+        noValidate
+      )
         +csrf
         p Ingresa tu correo electrónico y te enviaremos instrucciones para restablecer tu contraseña.
         div
-          +input('email')(type="email" placeholder="Correo electrónico")
+          +input('email')(
+            type="email"
+            placeholder="Correo electrónico"
+          )
         div
           +submit('Enviar enlace de restablecimiento')(class="w-full")
 
-    div(class="bg-white mt-4 py-4 shadow text-center text-sm")
+    div(class="mt-4 bg-white py-4 text-center text-sm shadow")
       +link('/auth/login', 'Volver al inicio de sesión')
