--- a/views/auth/reset-password.pug
+++ b/views/auth/reset-password.pug
@@ -1,18 +1,28 @@
 extends ../layout/index
 
 block vars
-  - var pageTitle='Crea una contraseña nueva'
+  - var pageTitle = "Crea una contraseña nueva"
 
 block content
   +title(pageTitle)
 
-  div(class="mt-8 mx-auto max-w-sm")
-    div(class="bg-white py-8 px-8 shadow")
-      form(class="flex flex-col gap-y-5" method='POST' noValidate)
+  div(class="mx-auto mt-8 max-w-sm")
+    div(class="bg-white px-8 py-8 shadow")
+      form(
+        class="flex flex-col gap-y-5"
+        method="POST"
+        noValidate
+      )
         +csrf
         div
-          +input('password')(type="password" placeholder="Contraseña nueva")
+          +input('password')(
+            type="password"
+            placeholder="Contraseña nueva"
+          )
         div
-          +input('confirmPassword')(type="password" placeholder="Repetir contraseña nueva")
+          +input('confirmPassword')(
+            type="password"
+            placeholder="Repetir contraseña nueva"
+          )
         div
           +submit('Restablecer contraseña')(class="w-full")
