--- a/views/email/confirm.pug
+++ b/views/email/confirm.pug
@@ -1,12 +1,12 @@
-div(style="font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;")
-  p Hola, #{name}:
+div(style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif")
+  p Hola, #{ name }:
 
   p Recientemente creaste una cuenta con este correo electrónico. Haz clic en el botón de abajo para confirmar tu cuenta.
 
-  p(style="margin: 32px 0;")
+  p(style="margin: 32px 0")
     a(
-      href= url
-      style="padding: 10px 32px; background-color: rgb(79 70 229); text-decoration: none; color: white;"
+      href=url
+      style="padding: 10px 32px; background-color: rgb(79 70 229); text-decoration: none; color: white"
       target="_blank"
     ) Confirmar correo
 
