--- a/views/properties/index.pug
+++ b/views/properties/index.pug
@@ -1,7 +1,7 @@
 extends ../layout/index
 
 block vars
-  - var pageTitle='Mis propiedades'
+  - var pageTitle = "Mis propiedades"
 
 block content
   +title(pageTitle)
