--- a/views/errors/404.pug
+++ b/views/errors/404.pug
@@ -1,11 +1,11 @@
 extends ../layout/index
 
 block vars
-  - var pageTitle='Página no disponible'
+  - var pageTitle = "Página no disponible"
 
 block content
   div(class="pt-20 text-center")
-    p(class="font-bold text-slate-800 text-xl")
+    p(class="text-xl font-bold text-slate-800")
       | Esta página no está disponible
     p(class="my-4 text-slate-700")
       | Es posible que el enlace que seleccionaste esté roto o que se haya eliminado la página.
