--- a/views/errors/500.pug
+++ b/views/errors/500.pug
@@ -1,11 +1,11 @@
 extends ../layout/index
 
 block vars
-  - var pageTitle='Problemas en el servidor'
+  - var pageTitle = "Problemas en el servidor"
 
 block content
   div(class="pt-20 text-center")
-    p(class="font-bold text-slate-800 text-xl")
+    p(class="text-xl font-bold text-slate-800")
       | Ha ocurrido un problema en el servidor
     p(class="mt-4 text-slate-700")
       | Si el error persiste, por favor comuniquese con el administrador del sitio.
